# arcsis

./: CMakeLists.txt  LICENSE
include/: arkis_data.h  depo.h
src/: arac_dialog.cpp  arac_dialog.h  arac_model.cpp  arac_model.h  arkis_client_main.cpp  arkis_server_main.cpp  background_tasks.cpp  background_tasks.h  gui_main.cpp  kiralama_dialog.cpp  kiralama_dialog.h  kiralama_model.cpp  kiralama_model.h  main.cpp  main_window.cpp  main_window.h  musteri_dialog.cpp  musteri_dialog.h  musteri_model.cpp  musteri_model.h
